--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,10 @@ dependencies:
   hive_generator: ^2.0.1
   build_runner: ^2.4.15
   intl: ^0.19.0
+  firebase_core: ^3.13.0
+  firebase_auth: ^5.5.3
+  cloud_firestore: ^5.6.7
+  google_sign_in: ^6.3.0
 
 dev_dependencies:
   flutter_test:
